add control pages

--- a/src/control-settings.html
+++ b/src/control-settings.html
@@ -1339,7 +1339,7 @@
 										<div class="flex flex-align-center">
 											<label class="form-field form-field-small field-xsmall w-50">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">295226</option>
 														<option value="">295225</option>
 														<option value="">295224</option>
@@ -1360,7 +1360,7 @@
 										<div class="flex flex-align-center">
 											<label class="form-field form-field-small field-xsmall w-66">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">18321 — MichaelUa</option>
 														<option value="">18322 — qpokycHuk</option>
 														<option value="">18323 — Michael Jackson</option>
@@ -1423,7 +1423,7 @@
 										<div class="flex px-4">
 											<label class="form-field form-field-small field-xsmall flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">295226</option>
 														<option value="">295225</option>
 														<option value="">295224</option>
@@ -1448,7 +1448,7 @@
 										<div class="flex px-4">
 											<label class="form-field form-field-small field-xsmall flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">18321 — MichaelUa</option>
 														<option value="">18322 — qpokycHuk</option>
 														<option value="">18323 — Michael Jackson</option>
@@ -1521,6 +1521,7 @@
 
 
 					<!-- ! Новый оператор -->
+					<!-- Мобильный вариант скрыт на (min-width:$sm) -->
 					<div class="d-sm-none">
 						<div class="mobile-table  mt-5">
 							<div class="mobile-table-item control-mobile-item table-cell--mark px-6 py-3">
