--- a/src/html-includes/sidebar.html
+++ b/src/html-includes/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="sidebar" id="sidebar">
+<aside class="sidebar -menu-" id="sidebar">
 	<div class="sidebar-inner">
 		<div class="flex flex-align-center d-lg-none mb-5">
 			<svg class="icon color-primary text-h6 mr-2">
