--- a/src/payments.html
+++ b/src/payments.html
@@ -91,7 +91,7 @@
 						<div class="flex flex-align-center mb-3">
 							<label class="form-field field-xsmall flex-grow">
 								<div class="form-input-cover">
-									<select class="form-input">
+									<select class="form-input pr-10">
 										<option value="">Все платежи</option>
 										<option value="">Не Все платежи</option>
 									</select>
@@ -197,7 +197,7 @@
 										<div class="flex flex-align-center px-4">
 											<label class="form-field form-field-small field-xsmall flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">Все платежи</option>
 														<option value="">Не Все платежи</option>
 													</select>
@@ -359,7 +359,7 @@
 										<label class="form-field form-field-small field-xsmall flex-grow">
 											<div class="text-small text-xs-body-2 text--medium mb-1">Агент: </div>
 											<div class="form-input-cover">
-												<select class="form-input">
+												<select class="form-input pr-10">
 													<option value="">allen 18829</option>
 													<option value="">allen 28829</option>
 												</select>
@@ -375,7 +375,7 @@
 										<label class="form-field form-field-small field-xsmall flex-grow">
 											<div class="text-small text-xs-body-2 text--medium mb-1">Валюта платежа: </div>
 											<div class="form-input-cover">
-												<select class="form-input">
+												<select class="form-input pr-10">
 													<option value="">USD</option>
 													<option value="">RUB</option>
 													<option value="">GRN</option>
@@ -409,7 +409,7 @@
 										<label class="form-field form-field-small field-xsmall flex-grow">
 											<div class="text-small text-xs-body-2 text--medium mb-1">Рейт: </div>
 											<div class="form-input-cover">
-												<select class="form-input">
+												<select class="form-input pr-10">
 													<option value="">10</option>
 													<option value="">20</option>
 													<option value="">30</option>
@@ -427,7 +427,7 @@
 										<label class="form-field form-field-small field-xsmall flex-grow">
 											<div class="text-small text-xs-body-2 text--medium mb-1">Валюта агента: </div>
 											<div class="form-input-cover">
-												<select class="form-input">
+												<select class="form-input pr-10">
 													<option value="">USD</option>
 													<option value="">RUB</option>
 													<option value="">GRN</option>
@@ -471,7 +471,7 @@
 										<div class="flex flex-align-center px-4">
 											<label class="form-field form-field-small field-xsmall flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">allen 18829</option>
 														<option value="">allen 28829</option>
 													</select>
@@ -493,7 +493,7 @@
 										<div class="flex flex-align-center px-4">
 											<label class="form-field form-field-small field-xsmall flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">USD</option>
 														<option value="">RUB</option>
 														<option value="">GRN</option>
@@ -545,7 +545,7 @@
 										<div class="flex flex-align-center px-4">
 											<label class="form-field form-field-small field-xsmall mr-3 flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">10</option>
 														<option value="">20</option>
 														<option value="">30</option>
@@ -569,7 +569,7 @@
 										<div class="flex flex-align-center px-4">
 											<label class="form-field form-field-small field-xsmall mr-3 flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">ZAR</option>
 														<option value="">RUB</option>
 														<option value="">GRN</option>
@@ -624,7 +624,7 @@
 										<label class="form-field form-field-small field-xsmall flex-grow">
 											<div class="text-small text-xs-body-2 text--medium mb-1">Валюта платежа: </div>
 											<div class="form-input-cover">
-												<select class="form-input">
+												<select class="form-input pr-10">
 													<option value="">USD</option>
 													<option value="">RUB</option>
 													<option value="">GRN</option>
@@ -650,7 +650,7 @@
 										<label class="form-field form-field-small field-xsmall flex-grow">
 											<div class="text-small text-xs-body-2 text--medium mb-1">Валюта перевода: </div>
 											<div class="form-input-cover">
-												<select class="form-input">
+												<select class="form-input pr-10">
 													<option value="">GRN</option>
 													<option value="">RUB</option>
 													<option value="">USD</option>
@@ -695,7 +695,7 @@
 										<div class="flex flex-align-center px-4">
 											<label class="form-field form-field-small field-xsmall mr-3 flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">USD</option>
 														<option value="">RUB</option>
 														<option value="">GRN</option>
@@ -733,7 +733,7 @@
 										<div class="flex flex-align-center px-4">
 											<label class="form-field form-field-small field-xsmall mr-3 flex-grow">
 												<div class="form-input-cover">
-													<select class="form-input">
+													<select class="form-input pr-10">
 														<option value="">ZAR</option>
 														<option value="">RUB</option>
 														<option value="">GRN</option>
