--- a/src/ui.html
+++ b/src/ui.html
@@ -372,7 +372,7 @@
 									<div class="text-body-2 mb-2">Обычное поле</div>
 									<div class="form-input-cover">
 
-										<select class="form-input">
+										<select class="form-input pr-10">
 											<option value="" disabled hidden selected>Выберите</option>
 											<option value="1"> 1</option>
 											<option value="2"> 2</option>
