--- a/src/admin-detailing-api.html
+++ b/src/admin-detailing-api.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="root">
-		<%= _.template(require('./html-includes/admin-header.html').default)() %>
+
 		<%= _.template(require('./html-includes/header.html').default)() %>
 
 		<div class="wrapper">
@@ -55,7 +55,7 @@
 							<div class="d-xs-flex w-100 w-md-auto">
 								<label class="form-field field-small flex-grow">
 									<div class="form-input-cover">
-										<input type="text" class="form-input pl-12 text-small text-xs-body-1">
+										<input type="text" class="form-input pl-12">
 										<div class="form-input-start pl-4">
 											<svg class="icon text-h6 color-primary">
 												<use xlink:href="img/icons.svg#search" />
