--- a/src/logs.html
+++ b/src/logs.html
@@ -22,6 +22,9 @@
 					<div class="mb-10">
 						<%= _.template(require('./html-includes/breadcrumbs.html').default)() %>
 					</div>
+					<div class="mb-5 d-md-none">
+						<%= _.template(require('./html-includes/search-by-name.html').default)() %>
+					</div>
 					<div class="mb-5">
 						<%= _.template(require('./html-includes/pagination.html').default)() %>
 					</div>
