--- a/src/html-includes/search-by-period.html
+++ b/src/html-includes/search-by-period.html
@@ -4,7 +4,7 @@
     <label class="form-field field-xsmall mr-5 flex-grow">
       <div class="text-body-2 mb-2">Начало</div>
       <div class="form-input-cover">
-        <input type="text" class="form-input pr-12" data-datepicker placeholder="15 апреля 2022">
+        <input type="text" class="form-input pr-12" data-datepicker placeholder="15.04.2022">
         <div class="form-input-end pr-4">
           <svg class="icon text-h6 color-primary">
             <use xlink:href="img/icons.svg#calendar" />
@@ -16,7 +16,7 @@
     <label class="form-field field-xsmall mr-md-5 flex-grow">
       <div class="text-body-2 mb-2">Конец</div>
       <div class="form-input-cover">
-        <input type="text" class="form-input pr-12" data-datepicker placeholder="20 апреля 2022">
+        <input type="text" class="form-input pr-12" data-datepicker placeholder="20.04.2022">
         <div class="form-input-end pr-4">
           <svg class="icon text-h6 color-primary">
             <use xlink:href="img/icons.svg#calendar" />
