--- a/src/control-settings-editable.html
+++ b/src/control-settings-editable.html
@@ -39,7 +39,7 @@
 									<div class="grid grid-spacing-3">
 										<div class="grid-col-6">
 											<label class="form-field form-field-small">
-												<div class="text-small text-xs-body-2 fade-80 text--demibold mb-2">Настройки джекпота: </div>
+												<div class="text-small text-xs-body-2 fade-80 text--demibold mb-2">Название зала: </div>
 												<div class="form-input-cover">
 													<input type="text" class="form-input" placeholder="Введите Название" value="uganda">
 												</div>
@@ -1347,20 +1347,16 @@
 											</label>
 										</div>
 										<div class="grid-col-12">
-											<label class="form-field form-field-small">
-												<div class="text-small text-xs-body-2 fade-80 text--demibold mb-2">Включить смены в кассе:</div>
-												<div class="form-input-cover">
-													<select class="form-input pr-10">
-														<option value="">0.01</option>
-														<option value="">0.02</option>
-													</select>
-													<div class="form-input-end pr-4 pe-none">
-														<svg class="icon text-small">
-															<use xlink:href="img/icons.svg#to-right" />
-														</svg>
-													</div>
+											<label class="form-field form-checkbox">
+												<div class="text-small text-xs-body-2 fade-80 text--demibold mr-2">Включить смены в кассе:</div>
+												<input type="checkbox" class="form-input-checkbox">
+												<div class="form-checkbox-target">
+													<svg class="icon">
+														<use xlink:href="./img/icons.svg#gal-ochka" />
+													</svg>
 												</div>
 											</label>
+
 										</div>
 										<div class="grid-col-12">
 											<label class="form-field form-field-small">
@@ -1562,17 +1558,12 @@
 									</td>
 									<td class="table-cell">
 										<div class="flex px-4">
-											<label class="form-field form-field-small field-small flex-grow">
-												<div class="form-input-cover">
-													<select class="form-input pr-10">
-														<option value="">0.01</option>
-														<option value="">0.02</option>
-													</select>
-													<div class="form-input-end pr-4 pe-none">
-														<svg class="icon text-small">
-															<use xlink:href="img/icons.svg#to-right" />
-														</svg>
-													</div>
+											<label class="form-field form-checkbox">
+												<input type="checkbox" class="form-input-checkbox">
+												<div class="form-checkbox-target">
+													<svg class="icon">
+														<use xlink:href="./img/icons.svg#gal-ochka" />
+													</svg>
 												</div>
 											</label>
 										</div>
