--- a/src/control-settings.html
+++ b/src/control-settings.html
@@ -216,7 +216,13 @@
 										<div class="text-body-2 text--demibold text--center">Баланс</div>
 									</td>
 									<td class="table-cell">
-										<div class="text-body-2 fade-80 px-4">1 000 000</div>
+										<div class="flex px-4">
+											<div class="text-body-2 fade-80">1 000 000</div>
+											<button
+												class="btn btn--primary color-text btn--link btn--underline text-body-2 ml-3">Зачислить кредиты</button>
+											<button
+												class="btn btn--primary color-text btn--link btn--underline text-body-2 ml-3">Списать кредиты</button>
+										</div>
 									</td>
 								</tr>
 								<tr class="table-row">
