--- a/src/control-jackpot.html
+++ b/src/control-jackpot.html
@@ -21,7 +21,7 @@
 
 					<!-- ~ значения слов -->
 					<!-- Мобильный вариант скрыт на (min-width:$sm) -->
-					<div class="d-sm-none" data-toggle-cover>
+					<div class="d-sm-none" data-toggle-cover data-toggle-static="true">
 						<button class="btn btn--primary btn--fill w-100 active-disabled" data-toggle-link>Раскрыть значения
 							слов</button>
 						<button class="btn btn--primary btn--contur mb-5 w-100 active-enabled" data-toggle-link>Скрыть значения
